--- a/README
+++ b/README
@@ -3,11 +3,11 @@ INTRODUCTION
 
 CLANN stands for `C library for Learning Appliance and Neural Networks'.
 Its was developed in a mastering engineering course of Artificial Neural
-Networks at the Federal University of Rio Grande do Norte (UFRN) [0]. In this
+Networks at the Federal University of Rio Grande do Norte (UFRN). In this
 course we have a very extensive and intensive teaching in both supervised and
 non-supervised learning techniques. The choice of C language was made based on
-its fastness, portability and embeddable capabilities. Mode information about
-CLANN could be find on its site [1] and repository [2].
+its fastness, portability and embeddable capabilities. More information about
+CLANN could be find on its repository [0].
 
 
 BUILD
@@ -24,12 +24,10 @@ CONTACT
 
 If you have any question about CLANN, send an e-mail to the contact below.
 
-Joao Paulo de Souza Medeiros <joaomedeiros@ufrnet.br>
+Joao Paulo de Souza Medeiros <ignotus21@gmail.com>
 
 
 REFERENCES
 ==========
 
-[0] http://www.ufrn.br/
-[1] http://labepi.cerescaico.ufrn.br/~jpsm/clann/
-[2] http://labepi.cerescaico.ufrn.br/redmine/projects/clann/
+[0] https://github.com/jpzm/clann/
